tests/expectations/compiler/const_generics/oob_fail.out
Error [ESAZ0374010]: Array index 20 out of bounds (array length is 2).
    --> compiler-test:6:16
     |
   6 |         return arr[20];
     |                ^^^^^^^
